# rad-setup-tpu

./: .gitignore  README.md  server.py  server_parameters.yaml
deprecated/: setup_pablo_old.py  switch.py
examples/: Makefile  example_log.c
log_helper/: CMakeLists.txt
log_helper/examples/: CMakeLists.txt  example_log.c
log_helper/include/: log_helper.h  log_helper_base.h  log_helper_udp.h
log_helper/src/: log_helper.cpp
logger/: CMakeLists.txt
logger/include/: log_helper.h  log_helper_base.h  log_helper_tcp.h  log_helper_udp.h
logger/src/: log_helper.cpp
machines_cfgs/: carola20001.yaml  carolk401.yaml  cuda_micro.json  dummy.json  run_final_block_v16.json  run_final_block_v8.json  run_main_block_from_image_v16.json  run_main_block_from_image_v8.json  run_mha_from_image_v16.json  run_mha_from_image_v8.json  run_multiheadedattention_v8.json  run_patch_encoding_v16.json  run_patch_encoding_v8.json  run_vit_base_16_edgetpu.json  run_vit_base_8_edgetpu.json
server/: __init__.py  command_factory.py  dut_logging.py  error_codes.py  logger_formatter.py  machine.py  print_manager.py  reboot_machine.py  server.py  server_parameters.yaml  sock_server.py  udp_test.py
server/classes/: Machine.py
server/machines_cfgs/: carolk401.yaml  cuda_micro.json
tests/: test_dut_logging.py  test_machine.py  test_reboot_machine.py  udp_test.py
